# folder

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
rental_app/: asgi.py  settings.py  urls.py  wsgi.py
